<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apps.vinsa_000.overwatchhelper.MapListFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assault_map_type"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="30sp"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/assault_maps">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/hanamura_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/hanamura_description"
                            android:src="@drawable/hanamura"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hanamura_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/anubis_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/anubis_description"
                            android:src="@drawable/anubis"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/anubis_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/volskaya_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/volskaya_industries_map"
                            android:src="@drawable/volskaya"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/volskaya_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escort_map_type"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="30sp"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/dorado_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/dorado_description"
                            android:src="@drawable/dorado"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dorado_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/route66_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/route66_description"
                            android:src="@drawable/route66"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/route66_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/gibraltar_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/gibraltar_description"
                            android:src="@drawable/gibraltar"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gibraltar_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hybrid_map_type"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="30sp"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/eichenwalde_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/eichenwalde_description"
                            android:src="@drawable/eichenwalde"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/eichenwalde_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/hollywood_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/hollywood_description"
                            android:src="@drawable/hollywood"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hollywood_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/kingsrow_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/kingsrow_description"
                            android:src="@drawable/kingsrow"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kingsrow_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/numbani_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/numbani_description"
                            android:src="@drawable/numbani"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numbani_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/control_map_type"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="30sp"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/ilios_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/ilios_description"
                            android:src="@drawable/ilios"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ilios_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/lijiang_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/lijiang_description"
                            android:src="@drawable/lijiang"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lijiang_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_border"
                        android:id="@+id/nepal_frame">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/nepal_description"
                            android:src="@drawable/nepal"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nepal_name"
                            android:textColor="@color/colorText"
                            android:layout_gravity="bottom|center_horizontal"/>
                    </FrameLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
